Додає ефект переходу

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--Герой-->
         <section class=" section hero">
             <div class="container">
-                <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="btn">Замовити послугу</button>
                 </div>
         </section>
@@ -265,6 +265,8 @@
                 </ul>
             </div>
         </section>
+
+        <!-- Клієнти -->
         <section class="section">
             <div class="container">
                 <h2 class="title-section">Постійні клієнти</h2>
@@ -371,11 +373,8 @@
             </div>
         </div>
     </footer>
+    
+    <script src="./js/modal.js"></script>
+
 </body>
 </html>
-<!-- width="41" height="47"
-
- height="41"
-width="63" height="46"
-width="63" height="46"
-width="94" height="44" -->
