--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
                 <div class="header-logo"> <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
                 </div>
                 <ul class="page-nav list">
-                    <li class="page-nav-item"> <a href="./index.html" class="page-nav-link current">Студія</a></li>
-                    <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link">Портфоліо</a></li>
+                    <li class="page-nav-item"> <a href="./index.html" class="page-nav-link">Студія</a></li>
+                    <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link current">Портфоліо</a></li>
                     <li class="page-nav-item"> <a href="" class="page-nav-link">Контакти</a></li>
                 </ul>
             </nav>
@@ -61,10 +61,17 @@
                     <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
                 </ul>
     
-                <ul class=" list portfolio">
+                <ul class="portfolio">
                     <li class="portfolio-item">
                         <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
-                            <img src="images/project1.jpg" alt="Технокряк" width="370" class="portfolio-img">
+                            <div class="portfolio-thumb">
+                                <img src="images/project1.jpg" alt="Технокряк" width="370" class="portfolio-img">
+                                <p class="portfolio-link-actions">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                            
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Технокряк</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
