Виправлення по валідатору

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         </button>
                     </div>
                 </div>
+                </div>
         </section>
         
         <!--Переваги-->
