--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="header-contacts">
                 <ul class="header-contacts-list">
                     <li class="header-contact-item"> 
-                        <a href="mailto:info@devstudio.com" class="page-nav-link">
+                        <a href="mailto:info@devstudio.com" class="page-nav-link contact">
                             <svg class="header-icon-mail">
                                 <use href="./images/icons.svg#icon-envelope" width="16" height="12"></use>
                             </svg>
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="header-contact-item">
-                        <a href="tel:+380961111111" class="page-nav-link">
+                        <a href="tel:+380961111111" class="page-nav-link contact">
                             <svg class="header-icon-tel">
                                 <use href="./images/icons.svg#icon-smartphone" width="10" height="16"></use>
                             </svg>
