--- a/portfolio.html
+++ b/portfolio.html
@@ -12,13 +12,14 @@
 
 <body>
     <!--Шапка сайту-->
+    <!--Шапка сайту-->
     <header class="header">
         <div class="container header-field">
             <nav class="header-field">
                 <div class="header-logo"> <a class="logo" href="./index.html"><span>Web</span>Studio</a>
                 </div>
                 <ul class="page-nav">
-                    <li class="page-nav-item"> <a href="./index.html" class="page-nav-link">Студія</a></li>
+                    <li class="page-nav-item"> <a href="./index.html" class="page-nav-link ">Студія</a></li>
                     <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link current">Портфоліо</a></li>
                     <li class="page-nav-item"> <a href="" class="page-nav-link">Контакти</a></li>
                 </ul>
@@ -27,7 +28,7 @@
             <div class="header-contacts">
                 <ul class="header-contacts-list">
                     <li class="header-contact-item">
-                        <a href="mailto:info@devstudio.com" class="page-nav-link">
+                        <a href="mailto:info@devstudio.com" class="page-nav-link contact">
                             <svg class="header-icon-mail">
                                 <use href="./images/icons.svg#icon-envelope" width="16" height="12"></use>
                             </svg>
@@ -35,7 +36,7 @@
                         </a>
                     </li>
                     <li class="header-contact-item">
-                        <a href="tel:+380961111111" class="page-nav-link">
+                        <a href="tel:+380961111111" class="page-nav-link contact">
                             <svg class="header-icon-tel">
                                 <use href="./images/icons.svg#icon-smartphone" width="10" height="16"></use>
                             </svg>
